# r3x

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/k8s/: benchmark.rs  context.rs  cost.rs  crds.rs  cronjob.rs  describe.rs  diff.rs  discovery.rs  events.rs  exec.rs  health.rs  helm.rs  hpa.rs  images.rs  logs.rs  metrics.rs  mod.rs  netpol.rs  nodes.rs  portforward.rs  rbac.rs  rbac_audit.rs  resources.rs  restarts.rs  scale.rs  security.rs  summary.rs  topology.rs  traffic.rs  watcher.rs
src/components/: AlertsBell.tsx  ClusterDashboard.tsx  CommandPalette.tsx  DetailPanel.tsx  EventsPanel.tsx  Header.tsx  HealthPanel.tsx  HelmPanel.tsx  HelpPanel.tsx  KeyboardBar.tsx  MetricsPanel.tsx  NetpolPanel.tsx  NodeDetailPanel.tsx  PortForwardPanel.tsx  RbacAuditPanel.tsx  RbacPanel.tsx  ResourceTable.tsx  SecurityPanel.tsx  Sidebar.tsx  Terminal.tsx  TopologyPanel.tsx
src/stores/: k8s.ts  theme.ts
src/styles/: global.css
